Update project links, content, and optimize images

--- a/app/globals.css
+++ b/app/globals.css
@@ -25,3 +25,12 @@
 html {
   scroll-behavior: smooth;
 }
+
+@keyframes gradientMove {
+  0% {
+    background-position: 0% 0%;
+  }
+  100% {
+    background-position: 0% 200%;
+  }
+}
